<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="8"
    tools:context="eu.pellerito.movies.fragment.DetailFragment">

    <!-- Image: BackDrop -->
    <ImageView
        android:id="@+id/detail_back_drop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="3"
        android:contentDescription="@string/details_content_description_image_backdrop" />


    <!-- Title -->
    <TextView
        android:id="@+id/detail_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/text_size_large"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="3"
        android:orientation="horizontal">

        <!-- Image: Poster -->
        <ImageView
            android:id="@+id/detail_poster"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/details_content_description_image_poster"
            android:padding="@dimen/content_padding_medium" />


        <!-- OverView -->
        <TextView
            android:id="@+id/detail_overview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:padding="@dimen/content_padding_medium"
            android:text="@string/details_overview"
            android:textColor="@color/colorTextPrimary"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="italic"/>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <!-- Title DetailsText -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/details_detail_text"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/text_size_xlarge"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <!-- ReleasedLabel -->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/content_padding_medium"
                android:text="@string/details_released_label"
                android:textColor="@color/colorAccentLight"
                android:textSize="@dimen/text_size_large" />

            <!-- Release Date -->
            <TextView
                android:id="@+id/detail_release_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/content_padding_medium"
                android:textColor="@color/colorPrimaryLight"
                android:textSize="@dimen/text_size_large" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- RatingLabel -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/content_padding_medium"
                android:text="@string/details_rating_label"
                android:textColor="@color/colorAccentLight"
                android:textSize="@dimen/text_size_large" />

            <RatingBar
                android:id="@+id/detail_rating"
                style="?android:attr/ratingBarStyleIndicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:isIndicator="true"
                android:numStars="5"
                android:stepSize="1.0" />
        </LinearLayout>


    </LinearLayout>


</LinearLayout>

